<resources>
    <string name="app_name">GitHub User</string>

    <string name="content_tab_text">This is Tab %1$d</string>

    <string name="strudel">\@%1$s</string>
    <string name="hint_search_github_user">Find GitHub User</string>
    <string name="refresh_button_text">Refresh</string>
    <string name="followers_tag_header">Followers</string>
    <string name="following_tag_header">Following</string>
    <string name="error_retrieve_follow_list_text">Failed</string>
    <string name="github_user_logo">GitHub User Logo</string>
    <string name="github_user_logo_text">GitHub User Logo Text</string>
    <string name="detail_user_actionbar_title">Detail User</string>
    <string name="settings_actionbar_title">Settings</string>
    <string name="list_favorite_actionbar_title">Favorites</string>
    <string name="list_user_actionbar_title">Github User\'s</string>
    <string name="something_wrong">Something wrong</string>
    <string name="you_give_someone_likes">You give %1$s likes</string>
    <string name="you_dont_give_someone_likes">You don\'t give %1$s likes</string>
    <string name="you_dont_like_anyone">you don\'t like anyone</string>
    <string name="has_no_followers">%1$s has no followers</string>
    <string name="doesnt_follow_anyone">%1$s doesn\'t follow anyone</string>
    <string name="it">it</string>
    <string name="unknow">Unknow</string>
    <string name="not_set">Not set</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="dark_mode">Dark Mode </string>
    <string name="theme_mode">Theme Mode</string>
    <string name="button_to_search_user">Button to search user</string>
    <string name="profile_photo">Profile photo</string>
    <string name="button_to_switch_favorite">Button to switch favorite</string>
    <string name="button_to_share">Button to share</string>
    <string name="profile_photo_tile">Profile photo tile</string>
    <string name="button_to_delete_from_list">Button to delete from list</string>

    <string-array name="tab_name">
        <item>Followers</item>
        <item>Following</item>
    </string-array>
</resources>